update broken path to home in the menu on the game page

--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
       <i class="fa-solid fa-angles-down"></i>
     </button>
     <ul class="dropdown-menu menu" aria-labelledby="dropdownMenuButton1">
-      <a class="menu_icon" href="/">Home</a>
+      <a class="menu_icon" href="index.html">Home</a>
       <a class="menu_icon" href="kitchen.html">Kitchen</a>
     </ul>
   </div>
