--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
       <i class="fa-solid fa-angles-down"></i>
     </button>
     <ul class="dropdown-menu menu" aria-labelledby="dropdownMenuButton1">
-      <a class="menu_icon" href="/">Home</a>
+      <a class="menu_icon" href="index.html">Home</a>
       <a class="menu_icon" href="kitchen.html">Kitchen</a>
     </ul>
   </div>
@@ -160,7 +160,7 @@
   <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <!-- Main script JS -->
-  <script defer src="assets/js/script.js"></script>
+  <script type="module" src="assets/js/script.js"></script>
   <!-- Fontawesome Script -->
   <script src="https://kit.fontawesome.com/4e8d2c2bb0.js" crossorigin="anonymous"></script>
 
