update design index and rules pages

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=UnifrakturMaguntia" />
+    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=UnifrakturMaguntia" /> -->
     <title>Witches Brew - Home</title>
 </head>
 
 <body>
     <section class="background">
-        <h1 class="white-color-text main-heading">Witches Brew</h1>
+        <h1 class="white-color-text main-heading heading">Witches Brew</h1>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-around box">
                 <!-- Button trigger modal -->
