--- a/rules.html
+++ b/rules.html
@@ -12,57 +12,53 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=UnifrakturMaguntia" />
     <title>Witches Brew - Home</title>
 </head>
 
 <body>
     <section class="background">
         <h1 class="white-color-text main-heading">Witches Brew</h1>
-        <div class="d-flex justify-content-center">
-            <div class="d-flex flex-wrap justify-content-between rules-button-box">
-                <a class="btn btn-custom-orange rules-button-custom" href="index.html">Home</a>
-                <a class="btn btn-custom-orange rules-button-custom" href="game.html">Game</a>
-                <a class="btn btn-custom-orange rules-button-custom" href="kitchen.html">Witches Kitchen</a>
-                <a class="btn btn-custom-orange rules-button-custom" href="creators.html">The Creators</a>
-            </div>
+        <div class="flex-wrap rules-button-box menu">
+            <a class="btn btn-custom-orange rules-button-custom" href="index.html">Home</a>
+            <a class="btn btn-custom-orange rules-button-custom" href="game.html">Game</a>
+            <a class="btn btn-custom-orange rules-button-custom" href="kitchen.html">Witches Kitchen</a>
+            <a class="btn btn-custom-orange rules-button-custom" href="creators.html">The Creators</a>
         </div>
-        <div class="d-flex justify-content-center">
-            <div class="rules-background d-flex justify-content-center">
-                <div class="rules-card">
-                    <h2>Rules</h2>
-                    <ul>
-                        <li>At the outset the player is assigned vitality points as well as levels for strength, agility
-                            and
-                            dexterity.</li>
-                        <li>In each round the player will face an enemy with its own strength, agility and dexterity
-                            levels.
-                        </li>
-                        <li>To defeat an enemy the player must have higher levels than the enemy in each category??????
-                        </li>
-                        <li>If you defeat an enemy you proceed to the next round. If you are defeated you lose vitality
-                            points
-                            before proceeding to the next round. The game is over when you lose all your vitality points.
-                        </li>
-                        <li>At the outset you are also assigned ingredients. As you move through the rounds you will
-                            also be
-                            rewarded with further ingredients. These ingredients can be used to make potions. The
-                            potions
-                            can then be used to increase your levels or decrease those of your enemy as per the
-                            properties
-                            of the particular potion.</li>
-                        <li>At any point a player can enter the Witches Kitchen with the ingredients they currently have
-                            and
-                            experiment by mixing them in the cauldron to find potions. Possible potions and properties
-                            will
-                            be recorded in the recipe book.</li>
-                        <li>Prior to commencing any fight with an enemy the player can mix and use a potion based on the
-                            ingredients they currently have. Choose wisely. The ingredients are used up once the potion
-                            is
-                            used.</li>
-                        <li>Use your ingredients wisely. Win as many fights as you can. Stay alive!</li>
-                    </ul>
-                </div>
+            <div class="rules-card">
+                <h2>Rules</h2>
+                <ul>
+                    <li>At the outset the player is assigned vitality points as well as levels for strength, agility
+                        and
+                        dexterity.
+                    </li><br>
+                    <li>In each round the player will face an enemy with its own strength, agility and dexterity
+                        levels.
+                    </li><br>
+                    <li>To defeat an enemy the player must have higher levels than the enemy in each category??????
+                    </li><br>
+                    <li>If you defeat an enemy you proceed to the next round. If you are defeated you lose vitality
+                        points
+                        before proceeding to the next round. The game is over when you lose all your vitality
+                        points.
+                    </li><br>
+                    <li>At the outset you are also assigned ingredients. As you move through the rounds you will
+                        also be
+                        rewarded with further ingredients. These ingredients can be used to make potions. The
+                        potions
+                        can then be used to increase your levels or decrease those of your enemy as per the
+                        properties
+                        of the particular potion.</li><br>
+                    <li>At any point a player can enter the Witches Kitchen with the ingredients they currently have
+                        and
+                        experiment by mixing them in the cauldron to find potions. Possible potions and properties
+                        will
+                        be recorded in the recipe book.</li><br>
+                    <li>Prior to commencing any fight with an enemy the player can mix and use a potion based on the
+                        ingredients they currently have. Choose wisely. The ingredients are used up once the potion
+                        is
+                        used.</li><br>
+                    <li>Use your ingredients wisely. Win as many fights as you can. Stay alive!</li>
+                </ul>
             </div>
         </div>
     </section>
