--- a/game.html
+++ b/game.html
@@ -81,7 +81,7 @@
     <div class="col-4">
       <div class="card h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="card-header w-100 bg-transparent border-0">
-          <h5 class="card-title text-center player-name">Player Name</h5>
+          <h5 class="card-title text-center player-name">Player</h5>
           <!-- Player Stats -->
           <div class="row px-2 pt-3 pb-4 player-stats-section">
             <div class="col">
