Implement atack btn handler

--- a/game.html
+++ b/game.html
@@ -75,7 +75,10 @@
     </div>
     <!-- ./villain card -->
 
-
+    <!-- Attack Button -->
+    <div class="col-2 d-flex flex-column justify-content-center align-items-center">
+      <button id="attack-btn" class="btn btn-danger btn-lg">Attack</button>
+    </div>
 
     <!-- Player Card -->
     <div class="col-4">
