solved overflow bug

--- a/new-kitchen.html
+++ b/new-kitchen.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="col col-lg-12 " id="couldron-col">
-                        <div id="couldron-img-container">
+                        <div id="couldron-img-container" class="cauldron">
                            <img id="couldron-img" src="assets/images/general/cauldron.gif" alt="Cauldon"> 
                         </div>
                     </div>
