--- a/rules.html
+++ b/rules.html
@@ -25,42 +25,37 @@
             <a class="btn btn-custom-orange rules-button-custom" href="kitchen.html">Witches Kitchen</a>
             <a class="btn btn-custom-orange rules-button-custom" href="creators.html">The Creators</a>
         </div>
-            <div class="rules-card">
-                <h2>Rules</h2>
-                <ul>
-                    <li>At the outset the player is assigned vitality points as well as levels for strength, agility
-                        and
-                        dexterity.
-                    </li><br>
-                    <li>In each round the player will face an enemy with its own strength, agility and dexterity
-                        levels.
-                    </li><br>
-                    <li>To defeat an enemy the player must have higher levels than the enemy in each category??????
-                    </li><br>
-                    <li>If you defeat an enemy you proceed to the next round. If you are defeated you lose vitality
-                        points
-                        before proceeding to the next round. The game is over when you lose all your vitality
-                        points.
-                    </li><br>
-                    <li>At the outset you are also assigned ingredients. As you move through the rounds you will
-                        also be
-                        rewarded with further ingredients. These ingredients can be used to make potions. The
-                        potions
-                        can then be used to increase your levels or decrease those of your enemy as per the
-                        properties
-                        of the particular potion.</li><br>
-                    <li>At any point a player can enter the Witches Kitchen with the ingredients they currently have
-                        and
-                        experiment by mixing them in the cauldron to find potions. Possible potions and properties
-                        will
-                        be recorded in the recipe book.</li><br>
-                    <li>Prior to commencing any fight with an enemy the player can mix and use a potion based on the
-                        ingredients they currently have. Choose wisely. The ingredients are used up once the potion
-                        is
-                        used.</li><br>
-                    <li>Use your ingredients wisely. Win as many fights as you can. Stay alive!</li>
-                </ul>
-            </div>
+        <div class="rules-card">
+            <h2>Rules</h2>
+            <ul>
+                <li>At the outset the player is assigned health points as well as levels for strength, agility
+                    and dexterity.
+                </li><br>
+                <li>In each round the player will face an enemy with its own strength, agility and dexterity
+                    levels.
+                </li><br>
+                <li>To defeat an enemy the player must fight the enemy using the Fight button.
+                </li><br>
+                <li>Each time the fight button is clicked the totals for strength, agility and dexterity for both player
+                    and enemy at that given time are assessed. If the enemy is stronger the player loses a health point.
+                    Each time prior to clicking the fight button the player can brew potions that can affect player or
+                    enemy levels. This is key to the game strategy and is explained further below.
+                </li><br>
+                <li>The player must keep fighting until the enemy is defeated or the the player runs out of health
+                    points.</li><br>
+                <li>If the player health points go to zero the game ends.</li><br>
+                <li>If you defeat an enemy you proceed to the next round and the health points are reset.
+                </li><br>
+                <li>The player also has access to ingredients in the Witches Kitchen. These ingredients can be used to
+                    make potions. The
+                    potions can then be used to increase your levels or decrease those of your enemy as per the
+                    properties of the particular potion. The recipes for and properties of all potions are found in the
+                    recipe book.</li><br>
+                <li>At any point in the game a player can enter the Witches Kitchen and brew potions. The player can
+                    brew a maximum of ten potions against any one enemy.</li><br>
+                <li>Create your potions wisely. Win as many fights as you can. Stay alive!</li>
+            </ul>
+        </div>
         </div>
     </section>
     <!-- Bootstrap Script -->
