--- a/game.html
+++ b/game.html
@@ -26,6 +26,16 @@
     </ul>
   </div>
 
+  <!-- Toast msg -->
+  <div class="toast-container position-fixed top-0 end-0 p-3">
+    <div class="toast align-items-center" role="alert" aria-live="polite" aria-atomic="true" data-bs-delay="2000">
+      <div class="d-flex">
+        <div class="toast-body">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Characters -->
   <div class="row w-100 flex-grow-1" id="game-board">
 
