--- a/new-kitchen.html
+++ b/new-kitchen.html
@@ -34,7 +34,7 @@
                     <div class="col col-lg-12 recipie-book-container">
                         <div class="row">
                             <div class="col-12 col-lg-6 button-aling">
-                                <a href="index.html" id="return-buton-container" class="buttons">
+                                <a href="game.html" id="return-buton-container" class="buttons">
                                     <img src="assets/images/general/return-button.png" alt="Return button"> 
                                 </a>
                             </div>
@@ -98,7 +98,13 @@
             <div class="previous"><--</div>
             <div class="next"><--</div>
         </div>    
-    </div> 
+    </div>
+
+    <div id="dropdown-alert" class="dropdown-alert">
+        <div class="dropdown-alert-content">
+            <div class="dropdown-alert-text"><div class="dropdown-alert-img"></div></div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
