--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Fontawesome Script -->
     <script src="https://kit.fontawesome.com/4e8d2c2bb0.js" crossorigin="anonymous"></script>
     <!-- Select Player Script -->
-    <script defer src="assets/js/select_player.js"></script>
+    <script type="module" defer src="assets/js/select_player.js"></script>
 </body>
 
 </html>
