--- a/game.html
+++ b/game.html
@@ -38,11 +38,11 @@
   </div>
 
    <!-- Attack Button -->
-   <div class="w-100 position-relative text-center pt-5">
+   <div class="w-100 position-relative text-center pt-1">
     <h3 id="round" class="text-white"></h3>
     <button id="attack-btn" class="btn btn-danger btn-lg pt-5">Attack</button>
   </div>
-  
+
   <!-- Toast msg -->
   <div class="toast-container position-fixed top-0 end-0 p-3">
     <div class="toast align-items-center" role="alert" aria-live="polite" aria-atomic="true" data-bs-delay="2000">
@@ -57,7 +57,7 @@
   <div class="row w-100 flex-grow-1" id="game-board">
 
     <!-- Villain Card -->
-    <div class="col-6">
+    <div class="col-6 pb-5">
       <div class="card h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="card-header w-100 bg-transparent border-0">
           <h5 id="villainName" class="card-title text-center"></h5>
@@ -103,7 +103,7 @@
     <!-- ./villain card -->
 
     <!-- Player Card -->
-    <div class="col-6">
+    <div class="col-6 pb-5">
       <div class="card h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="card-header w-100 bg-transparent border-0">
           <h5 class="card-title text-center player-name">Player</h5>
